SVGPointList should keep valid coordinate pairs when trailing y value is missing https://bugs.webkit.org/show_bug.cgi?id=311469 rdar://174069252

Reviewed by Brent Fulgham.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

Per SVG 2 [1], if an odd number of coordinates is provided for a
polyline/polygon points attribute, the element is in error with the
same behavior as an incorrectly specified path element. Successfully
parsed coordinate pairs before the incomplete trailing coordinate
are retained, while any other parse error (e.g. an invalid token)
rejects the entire list.

[1] https://w3c.github.io/svgwg/svg2-draft/shapes.html#PolylineElement

Upstream commit: https://github.com/web-platform-tests/wpt/commit/d1bf16a5383b29e7bc7845cef5f5aa4775936613 (Test Sync)

* LayoutTests/imported/w3c/web-platform-tests/svg/types/scripted/SVGList-parse-invalid-clears-items-expected.txt: Progression
* LayoutTests/imported/w3c/web-platform-tests/svg/types/scripted/SVGList-parse-invalid-clears-items.html: Synced WPT
* LayoutTests/svg/custom/poly-parsing-error.html: Rebaselined
* LayoutTests/svg/custom/poly-parsing-error-expected.txt: Ditto
* LayoutTests/svg/dom/points-parser-expected.txt: Ditto
* Source/WebCore/svg/SVGPointList.cpp:
(WebCore::SVGPointList::parse):

Canonical link: https://commits.webkit.org/310798@main